src/objects/Offer_Status_Description__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_short__c</fullName>
        <label>Status short</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Offer Status Description</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Status Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>